# course_os

./: .clang-format  .cproject  .dir-locals.el  .dockerignore  .gitattributes  .gitignore  .project  .swap_framework.c.un~  .swap_framework.h.un~  .swap_pqueue.c.un~  .swap_pqueue.h.un~  CMakeCache.txt  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  a.s  cmake_install.cmake  config.mk  cosconfig  course_os.cbp  cross_gcc.build  docker-compose.yml  doxyfile  format.eclipse.xml  format_profile.xml  generate_static_l1pt.c  kernells  memlayout.html  meson.build  peer_eval.txt  vm.c  whatever.txt
project/: meson.build
project/kernel/: README.md  meson.build
project/kernel/dtb/: README.md  bcm2708-rpi-zero-dumped.dtb  bcm2708-rpi-zero-dumped.dts
project/kernel/include/: meson.build
project/kernel/include/allocator/: allocator.h  meson.build
project/kernel/include/common/: dtb.h
project/kernel/include/drivers/: meson.build
project/kernel/include/drivers/chipset/bcm2835/: bcm2835.h
project/kernel/include/drivers/chipset/bcm2836/: bcm2836_uart.h
project/kernel/include/ds/: meson.build  vp_singly_linked_list.h
project/kernel/include/klibc/: ansi_escape.h  klibc.h  meson.build  stdlib.h
project/kernel/include/klibc/bits/: alltypes.h
project/kernel/include/loader/: elf.h
project/kernel/include/scheduler/: processControlBlock.h  scheduler.h
project/kernel/linker/: kernel.ld
project/kernel/src/allocator/: README.md  mem_alloc.c
project/kernel/src/allocator/test/: test_allocator.c
project/kernel/src/common/: debug.c  dtb.c  interrupt.c  interrupt_handler.s  memory.s  stacks.s  start.c  startup.s
project/kernel/src/drivers/: meson.build
project/kernel/src/drivers/chipset/: chipset.c  meson.build
project/kernel/src/drivers/chipset/bcm2835/: bcm2835.c  timer.c
project/kernel/src/drivers/chipset/bcm2836/: timer.c
project/kernel/src/drivers/mmci/: meson.build  mmci.c
project/kernel/src/drivers/uart/: pl011.c
project/kernel/src/ds/: meson.build  vp_singly_linked_list.c
project/kernel/src/ds/bpf/: HashMap.c
project/kernel/src/fs/: inode.c  meson.build
project/kernel/src/fs/tmpfs/: meson.build
project/kernel/src/klibc/: alloc.c  klibc.c  meson.build  stdio.c  string.c
project/kernel/src/loader/: README.md  loader.c
project/kernel/src/scheduler/: dispatcher.s  meson.build  processcontrolblock.c  scheduler.c
project/kernel/src/test_suite/: generate_tests.py  run-tests.sh  unit.tmpl
project/kernel/src/vm/: pmm.c  vas2.c  vm2.c
project/kernel/src/vm/test/: test_pagealloc2.c
project/scripts/: build-qemu.sh  build-toolchain.sh  clean.sh  debug.sh  generate-dtb.sh  run.sh  test.sh
src/kernel/: Makefile  README.md  meson.build  mount.sh
src/kernel/include/allocator/: allocator.h  mem_alloc.h
src/kernel/include/common/: interrupt_handler.h
src/kernel/include/drivers/: meson.build
src/kernel/include/drivers/chipset/: chipset.h  meson.build
src/kernel/include/drivers/chipset/bcm2835/: bcm2835.h  bcm2835_uart.h
src/kernel/include/drivers/chipset/bcm2836/: bcm2836.h  bcm2836_uart.h  timer.h
src/kernel/include/drivers/mmci/: mmci.h
src/kernel/include/drivers/uart/: pl011.h
src/kernel/include/ds/: vp_singly_linked_list.h
src/kernel/include/fs/: file.h  fs.h  meson.build
src/kernel/include/klibc/: klibc.h  stdint.h  stdio.h  syscall.h
src/kernel/include/loader/: #elf_common_features.h#  .#elf_common_features.h  elf_new.h  loaderutils.h
src/kernel/include/scheduler/: processControlBlock.h  scheduler.h
src/kernel/include/test_suite/: assert.h  units.h
src/kernel/include/vm/: vm2.h
src/kernel/linker/: kernel.ld
src/kernel/src/: meson.build
src/kernel/src/allocator/: allocator.c  mem_alloc.c  meson.build
src/kernel/src/allocator/include/: allocator.h
src/kernel/src/allocator/test/: test_allocator.c
src/kernel/src/common/: debug.c  dtb.c  hardwareinfo.c  init.c  interrupt.c  interrupt_handler.s  meson.build  stacks.s  start.c  startup.s
src/kernel/src/common/include/: debug.h  dtb.h  hardwareinfo.h  interrupt.h  interrupt_handler.h
src/kernel/src/drivers/: meson.build
src/kernel/src/drivers/chipset/: chipset.c
src/kernel/src/drivers/mmci/: mmci.c
src/kernel/src/drivers/uart/: meson.build
src/kernel/src/ds/: priority_queue.c  vp_singly_linked_list.c
src/kernel/src/ds/bpf/: meson.build
src/kernel/src/ds/include/: qstr.h  vp_singly_linked_list.h
src/kernel/src/ds/test/: priority_queue_test.c  qstr_test.c  vp_singly_linked_list_test.c
src/kernel/src/fs/: path.c  vfs.c
src/kernel/src/fs/include/: inode.h  path.h
src/kernel/src/fs/test/: test.c
src/kernel/src/fs/tmpfs/: tmpfs.c
src/kernel/src/klibc/: klibc.c  mem.c  meson.build  printf.c  stackprotector.c  stdio.h  string.c  syscall.c
src/kernel/src/klibc/include/: math.h  stdarg.h  stdbool.h  stdint.h  stdio.h  string.h
src/kernel/src/klibc/test/: string_test.c
src/kernel/src/loader/: README.md  elf.c  external_usages.s  inner_program  loader.c  loaderutils.c  meson.build  mkprex.sh  process_wrapper.mo  simple_program.mo
src/kernel/src/loader/docs/: Process_Creation_Steps.md
src/kernel/src/loader/include/: elf.h  elf_common_features.h  elf_new.h  loader.h  loaderutils.h
src/kernel/src/loader/test_processes/: mk-process-wrapper.sh  process.ms  process_wrapper.mo
src/kernel/src/sched/: dispatcher.s  elf.c  sched.c  test.s
src/kernel/src/sched/include/: elf.h  sched.h
src/kernel/src/scheduler/: dispatcher.s  processcontrolblock.c  scheduler.c
src/kernel/src/scheduler/include/: processControlBlock.h  scheduler.h
src/kernel/src/sys/: syscall.c
src/kernel/src/sys/include/: syscall.h
src/kernel/src/test/: README.md  generate_tests.py  generate_tests.sh  test.tmpl
src/kernel/src/test/include/: assert.h  test.h  units.h
src/kernel/src/test_suite/: README.md  generate_tests.py  test_group.tmpl  test_main.tmpl  unit.tmpl
src/kernel/src/vm/: asid_allocator.c  meson.build  vas2.c  vm2.c
src/kernel/src/vm/include/: asid_allocator.h  pmm.h
src/kernel/src/vm/test/: test_pagealloc2.c  test_vm2.c
(+602 files in other folders)
