common_sources = ['src/common/debug.c', 'src/common/interrupt.c',
                  'src/common/memory.s', 'src/common/start.c',
                  'src/common/startup.s', 'src/common/hardwareinfo.c',
                  'src/common/init.c', 'src/common/stacks.s',
                  'src/common/interrupt_handler.s', 'src/common/dtb.c']
kernel_sources += common_sources
